src/test/deca/extension/syntax/valid/declaration_assign_class_array.deca
// Creation of an array of int in class 

class a {
    Int[] a  = {4,4,5};
}

{
    a b = new a();
    print(a.a[2]);
}