src/test/deca/extension/syntax/invalid/array_new_missing_size.deca
// Wrong dimensions in array definition

{
    int[] tab = new int[4][][4]();

}